@@ -26,7 +26,7 @@
 
 dovecot2_config()
 {
-    ECHO_INFO "Configure Dovecot (pop3/imap server)."
+    ECHO_INFO "Configure Dovecot (pop3/imap server, version ${DOVECOT_VERSION})."
 
     [ X"${ENABLE_DOVECOT}" == X"YES" ] && \
         backup_file ${DOVECOT_CONF} && \
